2005-05-24  Don Allingham  <don@gramps-project.org>
	* various: CVS conflict resolution

2005-05-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/plugins/PHPGedViewConnector.py: Enhanced version.
	
2005-05-23  Alex Roitman  <shura@gramps-project.org>
	* various: merge changes made in gramps20 branch with main trunk.

2005-05-23  Don Allingham  <don@gramps-project.org>
	* src/MergePeople.py: clean up and refactoring of code.
	* Release: Version 2.0.1 "None shall pass" released.

2005-05-23  Alex Roitman  <shura@gramps-project.org>
	* src/po/ru.po: More tranlsated tips.

2005-05-23  Eero Tamminen  <eerot@sf>
	* src/po/fi.po: Translate all fuzzy strings.  Tips are still to be
	  translated
	* src/plugins/StatisticsChart.py: Fix a typo in one string
	  (I actually changed the string, but now it should actually be
	   understandable i.e. something people can localize)
	* src/dates/Makefile.am, src/dates/Date_fi.py: Remove Finnish date
	  parser.  Unfortunately I don't have time either to fix DateParser.py
	  regexps matches to be position independent or write the required
	  (almost) duplicate code to Date_fi.py directly

2005-05-23  Jens Arvidsson <jya@sverige.nu>
	* src/po/sv.po: Translation update for version 2.0.1.

2005-05-22  Don Allingham  <don@gramps-project.org>
	* src/MergePeople.py: merge improvements, merge data not merged before.

2005-05-22  Alex Roitman  <shura@gramps-project.org>
	* src/ImageSelect.py (item_event): Do nothing if nothing is selected.
	* src/EditSource.py (button_press): Return if no data.
	* src/Sources.py (drag_data_get): Return if no data.
	* src/EditPerson.py (ev_drag_data_get,name_drag_data_get):
	Return if no data.
	* src/EditPlace.py (url_source_drag_data_get): Properly obtain data;
	return if no data.

2005-05-22  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/po/es.po: Updated translation for filters, tips still pending

2005-05-21  Don Allingham  <don@gramps-project.org>