@@ -32,7 +32,9 @@ from gettext import gettext as _
 # GTK/Gnome modules
 #
 #-------------------------------------------------------------------------
+import gobject
 import gtk.glade
+import gtk.gdk
 import gnome
 
 #-------------------------------------------------------------------------
@@ -180,11 +182,12 @@ class EditSource:
 
         self.top_window.get_widget('ok').set_sensitive(not self.db.readonly)
 
-        self.display_references()
         if parent_window:
             self.top.set_transient_for(parent_window)
         self.add_itself_to_menu()
         self.top.show()
+        self.refs_label.window.set_cursor(gtk.gdk.Cursor(gtk.gdk.WATCH))
+        gobject.idle_add(self.display_references)
         self.data_sel = self.datalist.get_selection()
 
     def on_add_data_clicked(self,widget):
@@ -348,6 +351,7 @@ class EditSource:
             Utils.unbold_label(self.refs_label)
             
         self.ref_not_loaded = 0
+        self.refs_label.window.set_cursor(gtk.gdk.Cursor(gtk.gdk.LEFT_PTR))
 
     def on_source_apply_clicked(self,obj):
 
@@ -403,7 +407,8 @@ class EditSource:
             self.gallery.load_images()
         elif page == 3 and self.ref_not_loaded:
             self.ref_not_loaded = 0
-            self.display_references()
+            self.refs_label.window.set_cursor(gtk.gdk.Cursor(gtk.gdk.WATCH))
+            gobject.idle_add(self.display_references)
         text = unicode(self.notes_buffer.get_text(self.notes_buffer.get_start_iter(),
                                 self.notes_buffer.get_end_iter(),False))
         if text:
